[package]
name = "serde-with-expand-env"
version = "1.1.0"
description = "Parse environment variables in serde crate using deserialize_with."
authors = ["roger <rogerduran@gmail.com>"]
edition = "2018"

license = "MIT"
readme = "README.md"
keywords = ["serde", "environment"]

repository = "https://github.com/Roger/serde-with-expand-env"

[badges]
travis-ci = { repository = "Roger/serde-with-expand-env", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
shellexpand = "2.0.0"

[dev-dependencies]
serde_json = "1.0.44"
toml = "0.5.5"
